[gd_scene load_steps=6 format=3 uid="uid://d2lj1d388w5wp"]

[ext_resource type="PackedScene" uid="uid://chplh0o6jdofk" path="res://player/player.tscn" id="1_1nubb"]
[ext_resource type="Script" path="res://scenes/BaseLevelScene.gd" id="1_g72f7"]
[ext_resource type="PackedScene" uid="uid://mbkor2h1ykp4" path="res://components/element_tile_handler/elements_tile_map.tscn" id="4_5886p"]
[ext_resource type="PackedScene" uid="uid://c5qnbx0m37728" path="res://components/exit_door.tscn" id="4_gs3gs"]

[sub_resource type="LabelSettings" id="LabelSettings_bmcyp"]
font_size = 8

[node name="Level" type="Node2D"]
script = ExtResource("1_g72f7")

[node name="ElementsTileMap" parent="." instance=ExtResource("4_5886p")]
layer_0/tile_data = PackedInt32Array(458752, 0, 0, 458753, 0, 0, 524289, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524303, 0, 0, 524302, 0, 0, 524301, 0, 0, 524288, 0, 0, 458737, 131072, 0, 524273, 65536, 0, 393201, 0, 0, 589809, 196608, 0, 655345, 0, 4, 720881, 65536, 4, 786417, 0, 5, 458754, 0, 0, 524290, 0, 0, 524291, 0, 0, 458755, 0, 0, 524292, 0, 0, 524293, 0, 0, 458757, 0, 0, 458758, 0, 0, 524294, 0, 0, 458763, 0, 0, 458764, 0, 0, 524299, 0, 0, 524300, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 65536, 0, 393233, 65536, 0, 393234, 65536, 0, 458771, 0, 0, 458768, 65536, 0, 458769, 65536, 0, 458770, 65536, 0, 524304, 65536, 0, 524305, 65536, 0, 524306, 65536, 0, 393235, 0, 0, 524307, 0, 0, 393236, 65536, 1, 327702, 65536, 0, 327701, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 65536, 1, 327703, 0, 4, 262167, 0, 4, 196631, 0, 4, 262168, 0, 4, 196632, 0, 4, 131096, 0, 4, 196633, 0, 4, 131097, 0, 4, 327704, 0, 4, 327705, 0, 4, 327706, 0, 4, 262169, 0, 4, 262170, 0, 4, 196634, 0, 4, 327707, 0, 4, 393245, 0, 0, 393246, 0, 0, 393247, 65536, 0, 393240, 65536, 1, 393241, 65536, 1, 458777, 65536, 1, 458778, 65536, 1, 458779, 65536, 1, 393243, 65536, 1, 393242, 65536, 1, 458776, 65536, 1, 458780, 65536, 1, 458781, 0, 0, 458782, 0, 0, 458783, 65536, 1, 458784, 65536, 1, 393244, 65536, 0, 458785, 65536, 1, 458786, 65536, 1, 458775, 65536, 1, 458772, 65536, 1, 458773, 65536, 1, 458774, 65536, 1, 524308, 65536, 1, 524309, 65536, 1, 524310, 65536, 1, 524311, 65536, 1, 524312, 65536, 1, 524313, 65536, 1, 524314, 65536, 1, 524315, 65536, 1, 524316, 65536, 1, 524317, 0, 0, 524318, 0, 0, 524319, 65536, 1, 524320, 65536, 1, 524321, 65536, 1, 524322, 65536, 1, 327711, 65536, 0, 262175, 65536, 0, 327712, 65536, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 393252, 0, 0, 393251, 0, 0, 393248, 65536, 0, 393249, 0, 0, 393250, 0, 0, 262179, 0, 0, 262180, 0, 0, 327717, 0, 0, 393253, 0, 0, 393255, 0, 0, 393254, 0, 0, 327719, 0, 0, 327720, 0, 4, 262184, 0, 4, 196648, 0, 4, 458792, 65536, 1, 458793, 65536, 1, 458794, 65536, 1, 393257, 65536, 0, 393258, 65536, 0, 393259, 65536, 0, 262185, 0, 4, 262186, 0, 4, 262187, 0, 4, 327721, 0, 4, 327722, 0, 4, 327723, 0, 4, 393256, 65536, 0, 262176, 65536, 0, 327710, 0, 0, 262174, 65536, 0, 327709, 0, 0, 262173, 0, 4, 327713, 0, 0, 262177, 0, 0, 458756, 0, 0, 458759, 0, 0, 524295, 0, 0, 393223, 0, 0, 327688, 0, 0, 393224, 0, 0, 524296, 0, 0, 458760, 0, 0, 327689, 0, 0, 393225, 0, 0, 524297, 0, 0, 458761, 0, 0)

[node name="Player" parent="." instance=ExtResource("1_1nubb")]
unique_name_in_owner = true
position = Vector2(14, 102)

[node name="Label" type="Label" parent="."]
offset_left = -276.0
offset_top = 48.0
offset_right = -55.0
offset_bottom = 100.0
text = "These tiles are necessary 
for the code, don't remove"
label_settings = SubResource("LabelSettings_bmcyp")

[node name="ExitDoor" parent="." instance=ExtResource("4_gs3gs")]
z_index = -1
position = Vector2(696, 49)

[node name="WinUI" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="WinUI"]
anchors_preset = -1
anchor_left = 0.199219
anchor_top = 0.166667
anchor_right = 0.800781
anchor_bottom = 0.833333
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="WinUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="WinUI/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="WinUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "YOU WIN"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="WinUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="NextLevelButton" type="Button" parent="WinUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.52
text = "Next Level"

[node name="MainMenuButton" type="Button" parent="WinUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.52
text = "Main Menu"

[node name="Label2" type="Label" parent="."]
offset_left = 6.0
offset_top = 70.0
offset_right = 93.0
offset_bottom = 83.0
text = "Press A and D to Move"

[node name="Label3" type="Label" parent="."]
offset_left = 96.0
offset_top = 56.0
offset_right = 155.0
offset_bottom = 69.0
text = "Space To Jump"

[node name="Label4" type="Label" parent="."]
offset_left = 240.0
offset_top = 68.0
offset_right = 299.0
offset_bottom = 81.0
text = "Click To Shoot"

[connection signal="pressed" from="WinUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="WinUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
